--- a/src/main/resources/templates/personList.html
+++ b/src/main/resources/templates/personList.html
@@ -7,11 +7,11 @@
         <link rel="stylesheet" href="/css/bulma.min.css" />
     </head>
     <body>
-        <div class="container">            
+        <div class="container mt-4 mb-4">
             <h1 class="title">Személyek</h1>
             <div class="field is-grouped">
                 <input class="input" type="text" placeholder="vezetéknév szűrő" id="filter">
-                <a href="/person/add" class="button">Új személy hozzáadása</a>
+                <a href="/person/add" class="button is-info">Új személy hozzáadása</a>
             </div>
             <div id="list" class="field"></div>
             <div id="pager" class="field"></div>
