reorder entity person view 2

--- a/src/main/resources/templates/personOne.html
+++ b/src/main/resources/templates/personOne.html
@@ -30,52 +30,53 @@
                 </div>
             </div>
             
-            <div class="box">
-                <div class="columns">
-                    <div class="column"><h2 class="title is-5">Állandó lakcím</h2></div>
-                    <div class="column"><label class="checkbox"><input type="checkbox" /> létezik</label></div>
-                </div>   
-                <div class="field-body block">
-                    <div class="field">
-                        <input class="input" type="text" placeholder="irányítószám">
-                    </div>
-                    <div class="field">
-                        <input class="input" type="text" placeholder="település">
-                    </div>
-                    <div class="field">
-                        <input class="input" type="text" placeholder="cím">
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="columns">
-                        <div class="column"><h2 class="title is-6">Elérhetőségek</h2></div>
-                        <div class="column"><div class="buttons is-right"><button class="button is-info" >Új</button></div></div>
-                    </div>     
-                    <div>
-                        <div class="columns">
-                            <div class="column">
-                                <div class="select">
-                                    <select>
-                                        <option>Email</option>
-                                        <option>Telefon</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="column"> <input class="input" type="text"></div>
-                            <div class="column">
-                                <div class="buttons is-right"><button class="button is-danger">Törlés</button></div></div>
-                        
-                        </div>     
-
-
-                    </div>
-                </div>
+            <div class="box" id="constant">
+            </div>
+            <div class="box" id="temporary">
             </div>
             <div class="buttons is-right">
-                <button class="button is-danger">Törlés</button>
+                {{? ! it.new }}<button class="button is-danger">Törlés</button>{{?}}
                 <button class="button is-success">Mentés</button>
             </div>
+        </script>        
+        <script type="text/x-dot-template" id="address">
+                <div class="columns">
+                    <div class="column"><h2 class="title is-5">{{? it.kind == 'constant'}}Állandó{{??}}Ideiglenes{{?}} lakcím</h2></div>
+                    <div class="column"><label class="checkbox"><input type="checkbox" /> létezik</label></div>
+                </div>   
+                <div class="hider">   
+                    <div class="field-body block">
+                        <div class="field">
+                            <input class="input" type="text" placeholder="irányítószám">
+                        </div>
+                        <div class="field">
+                            <input class="input" type="text" placeholder="település">
+                        </div>
+                        <div class="field">
+                            <input class="input" type="text" placeholder="cím">
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="columns">
+                            <div class="column"><h2 class="title is-6">Elérhetőségek</h2></div>
+                            <div class="column"><div class="buttons is-right"><button class="button is-info" >Új</button></div></div>
+                        </div>     
+                        <div>
+                            <div class="columns">
+                                <div class="column">
+                                    <div class="select">
+                                        <select>
+                                            <option>Email</option>
+                                            <option>Telefon</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="column"><input class="input" type="text"></div>
+                                <div class="column"><div class="buttons is-right"><button class="button is-danger">Törlés</button></div></div>
+                            </div>     
+                        </div>
+                    </div>
+                </div>   
         </script>        
         <script type="text/x-dot-template" id="error">
             <h2>{{=it.message}}</h2>
