PersonService and tests api create + delete DDL test DML person view 4 entity id is Long Notify footer

--- a/src/main/resources/templates/personList.html
+++ b/src/main/resources/templates/personList.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/css/bulma.min.css" />
     </head>
     <body>
+  
         <div class="container mt-4 mb-4">
             <h1 class="title">Személyek</h1>
             <div class="field is-grouped">
@@ -16,6 +17,7 @@
             <div id="list" class="field"></div>
             <div id="pager" class="field"></div>
         </div>
+        <div th:replace="footer::footer"></div>
     </body>
     <script type="text/x-dot-template" id="main">
             {{? !it.page.empty}}
