error handing Readme template include

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <div class="container mt-4 mb-4">
-            <h1 class="title">Home</h1>
-
-            <p  class="block">
+            <h1 class="title">Hiba</h1>
+            <h2 class="subtitle" th:text="${subTitle}">${subTitle}</h2>
+            <p class="block">
                 Kezdje <a href="/person/list">itt</a>!
             </p>
 
         </div>
         <div th:replace="~{footer::footer}"></div>
     </body>
-</html>        
+</html>       
