--- a/src/main/resources/templates/personOne.html
+++ b/src/main/resources/templates/personOne.html
@@ -15,7 +15,7 @@
             
 
         <input id="id" type="hidden" th:value="${id}"/>
-        <div th:replace="footer::footer"></div>
+        <div th:replace="~{footer::footer}"></div>
                 
     </body>
         <script type="text/x-dot-template" id="person">
